# peg_playground

./: .gitignore  CMakeLists.txt  codeeditor.cpp  codeeditor.h  linenumberarea.cpp  linenumberarea.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_deploy.bat
